--- a/docker/requirements.txt
+++ b/docker/requirements.txt
@@ -1,4 +1,3 @@
-#VMAF- Required Python packages:
 numpy>=1.18.2
 scipy>=1.4.1
 matplotlib>=3.2.1
@@ -9,11 +8,11 @@ h5py>=2.6.0
 sureal>=0.4.2
 dill>=0.3.1
 cython
-PyWavelets==1.1.1
+# PyWavelets==1.1.1
+PyWavelets
 python-slugify>=5.0.0
-
-#Others
 plotly
 xmltodict
 jupyter-dash
 lxml
+siti-tools
